recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: identifier expected but ')' found.
    gauche(90.)
              ^FourSquare:12: error: identifier expected but ')' found.
  gauche(90.)
            ^FourSquare:13: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:14: error: identifier expected but ')' found.
  gauche(90.)
            ^FourSquare:15: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:16: error: identifier expected but ')' found.
  gauche(90.)
            ^FourSquare:17: error: identifier expected but ')' found.
  avance(100.)
             ^FourSquare:18: error: identifier expected but ')' found.
  gauche(90.)
            ^